addedmore skills and removed some

--- a/index.html
+++ b/index.html
@@ -192,21 +192,21 @@
             <h1>Speciality </h1>
             <div class="boxcontent">
               <li>HTML</li>
-              <li>CSS</li>
-              <li>Jquery</li>
+              <li>CSS/SASS</li>
+              <li>JQuery</li>
               <li>JavaScript</li>
-              <li>Frameworks</li>
+              <li>AJAX,REST</li>
               <li>API's</li>
             </div>
           </div>
           <div class="box box2">
             <h1>Worked With</h1>
             <div class="boxcontent">
-              <li>Reacts</li>
-              <li>Angular</li>
-              <li>VueJS</li>
+              <li>ReactJs</li>
+              <li>NodeJs</li>
+              <li>Express</li>
               <li>MongoDB</li>
-              <li>Firebase</li>
+              <li>SQL</li>
               <li>Meteor</li>
             </div>
           </div>
@@ -221,7 +221,7 @@
           <label name="subject">Subject</label>
           <br />
           <br />
-          <input type="text" name="name" />
+          <input type="text" name="name" required/>
           <br />
           <label>Name</label>
           <br />
