fixed css issues and introduced flexbox

--- a/index.html
+++ b/index.html
@@ -185,33 +185,35 @@
     </div>
 
     <div class="skills" id="skills">
-      <h1>Things I can do ✌️</h1>
-      <div class="container">
-        <div class="grid">
-          <div class="box box1">
-            <h1>Speciality </h1>
-            <div class="boxcontent">
-              <li>HTML</li>
-              <li>CSS/SASS</li>
-              <li>JQuery</li>
-              <li>JavaScript</li>
-              <li>AJAX,REST</li>
-              <li>API's</li>
-            </div>
+      <div class="skill--h1">
+        <h1>Things I can do ✌️</h1>
+
+      </div>
+      <div class="speciality">
+        <div class="box box1">
+          <h1>Speciality </h1>
+          <div class="boxcontent">
+            <li>HTML</li>
+            <li>CSS/SASS</li>
+            <li>JQuery</li>
+            <li>JavaScript</li>
+            <li>Ajax,Rest API's</li>
+            <li>Response Design</li>
           </div>
-          <div class="box box2">
-            <h1>Worked With</h1>
-            <div class="boxcontent">
-              <li>ReactJs</li>
-              <li>NodeJs</li>
-              <li>Express</li>
-              <li>MongoDB</li>
-              <li>SQL</li>
-              <li>Meteor</li>
-            </div>
+        </div>
+        <div class="box box2">
+          <h1>Worked With</h1>
+          <div class="boxcontent">
+            <li>React</li>
+            <li>NodeJs</li>
+            <li>Express</li>
+            <li>MongoDB</li>
+            <li>SQL</li>
+            <li>Meteor</li>
           </div>
         </div>
       </div>
+
     </div>
 
     <div class="contact" id="contact">
