added my github profile

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <title>Kenny Mark</title>
   <link rel="canonical" href="http://www.kennymark.co.uk">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="web developer, computer science, liverpool, chester, Manchester hire me, web design, coding, build, websites, javascript, css, html">
-  <meta name="description" content="This is Kenny Mark's Personal Website. I am a computer science student who loves web development. I am for hire">
+  <meta name="keywords" content="Web developer, Kennymark, computer science, liverpool, chester, Manchester hire me, web design, coding, build, websites, javascript, css, html">
+  <meta name="description" content="Kenny Mark's Personal Website. I am a computer science student who loves web development. I am for hire">
   <!--FACEBOOK-->
-  <meta property="og:title" content="">
+  <meta property="og:title" content="My personal website">
   <meta property="og:site_name" content="">
   <meta property="og:url" content="http://www.kennymark.co.uk/new/">
   <meta property="og:description" content="This is Kenny Mark's Personal Website. I am a computer science student who loves web development. I am for hire">
@@ -117,8 +117,8 @@
         <div class="col proj3">
           <img src="imgs/schoolwebsite.PNG" alt="Image of the school website" />
           <div class="description">
-            <p>One of my most proudest projects or projects yet. The FSE-REC is an asp.net website built by me and and 3 other
-              friends as a projects for my second year project in University. It was built in the course of 4 weeks. It includes
+            <p>One of my most proudest projects yet. The FSE-REC is an asp.net website built by me and and 3 other friends as
+              my second year work based learning project for the University. It was built in the course of 4 weeks. It includes
               functionality ranging from a SQl database, dynamic routing, login integration. </p>
             <button>
               <a href="http://1613775.studentwebserver.co.uk/fserec/" target="_blank">View Project</a>
@@ -163,9 +163,16 @@
         </div>
       </div>
 
-      <a href="projects.html" _target="blank">
-        <button class="btn">View more projects &#8594;</button>
-      </a>
+      <div class="external-links">
+        <a href="projects.html" _target="blank">
+          <button class="btn btn-projects">View more projects &#8594;</button>
+        </a>
+        <a href="https://www.github.com/kennymark" _target="blank">
+          <button class="btn btn-github">Visit my Github &#8619;</button>
+        </a>
+      </div>
+
+
     </div>
     <div class="profile" id="profile">
       <div class="container">
@@ -177,9 +184,9 @@
           and like the cliche goes, sometimes "Less is More".
         </p>
         <p>I actively spend many hours per day writing web code to perfect my skills. Web development is what I'm really passionate
-          about hence the effort I put in. Skill wise, I can practically build any type of website with a good modern and
-          responsive design that doesn't complex interactions between the browser and a server.You can hire me to work on
-          your website or front-end projects
+          about hence the effort I put into it. Skill wise, I can practically build any type of website with a good modern
+          and responsive design. I can also build backend with Node.js, visit my Github to see sample projects.You can hire
+          me to work on your website or front-end projects
         </p>
       </div>
     </div>
@@ -205,7 +212,7 @@
           <h1>Worked With</h1>
           <div class="boxcontent">
             <li>React</li>
-            <li>NodeJs</li>
+            <li>Node.js</li>
             <li>Express</li>
             <li>MongoDB</li>
             <li>SQL</li>
