fresh new design..

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 
 <body>
-  <div class="sideNav">
+  <div class="nav">
     <p>MENU</p>
     <ul>
       <li class="items">
@@ -79,186 +79,187 @@
       </li>
     </ul>
   </div>
-  <div class="realbody">
-    <div class="landing">
-      <!--<video src="assets/video/bgVideo.mp4" autoplay loop></video>-->
-      <div class="introdiv">
-        <h1>Hello! I'm Kenny and I
-          <span class="intro"> </span>
-          <br>websites</h1>
-      </div>
+  <div class="landing">
+    <!--<video src="assets/video/bgVideo.mp4" autoplay loop></video>-->
+    <div class="color-red">
 
     </div>
-    <div class="projects" id="projects">
-      <h1>Portfolio Sample</h1>
-      <div class="row">
-        <div class="col proj1">
-          <img src="imgs/weatherapp.PNG" alt="An image of a weather app on codepen.io" />
-          <div class="description">
-            <p>This is a weather app built with the DarkWeather API to query weather data based on user data or from a search
-              input. Languages used here were mainly JavaScript, JQuery. I used both the axios library and the JQuery API
-              methods to make the API calls.</p>
-            <button>
-              <a href="https://run.plnkr.co/plunks/0EHSofihFea3DvhDaYRb/" target="_blank">View Project</a>
-            </button>
-          </div>
-        </div>
-        <div class="col proj2">
-          <img src="imgs/texteditor.PNG" alt="An image of a text editor app on codepen" />
-          <div class="description">
-            <p>This is a web based text editor that does real time text analysis using natural language processing via the compromise.cool
-              and rita.js libraries</p>
-            <button>
-              <a href="https://codepen.io/kennymark/full/KmRVjp/" target="_blank">View Project</a>
-            </button>
-          </div>
-        </div>
-
-        <div class="col proj3">
-          <img src="imgs/schoolwebsite.PNG" alt="Image of the school website" />
-          <div class="description">
-            <p>One of my most proudest projects yet. The FSE-REC is an asp.net website built by me and and 3 other friends as
-              my second year work based learning project for the University. It was built in the course of 4 weeks. It includes
-              functionality ranging from a SQl database, dynamic routing, login integration. </p>
-            <button>
-              <a href="http://1613775.studentwebserver.co.uk/fserec/" target="_blank">View Project</a>
-            </button>
-          </div>
-        </div>
-
-      </div>
-      <div class="row">
-
-        <div class="col proj4">
-          <img src="imgs/ozstudio.PNG" alt="an image of Oz Studios homepage" />
-          <div class="description">
-            <p>Oz Studios is a fictional web design agency website built to showcase my skills as a front-end developer or web
-              designer. The project is hosted on Github and the code can be used without attribution</p>
-            <button>
-              <a href="http://www.kennymark.co.uk/oz" target="_blank">View Project</a>
-            </button>
-          </div>
-        </div>
-
-        <div class="col proj5">
-          <img src="imgs/davon.png" alt="Image of Davon's website" />
-          <div class="description">
-            <p>Davon's personal website is a modern colourful website built to suit the clients need. Design was inspired by
-              material design and other artists design work </p>
-            <button>
-              <a href="http://www.kennymark.co.uk/davon" target="_blank">View Project</a>
-            </button>
-          </div>
-
-        </div>
-        <div class="col proj6">
-          <img src="imgs/blogPost.PNG" alt="An simple design" />
-          <div class="description">
-            <p>A showcase of my skills to reproduce pixel by pixel a projuct after it has been designed by a designer using
-              normal front-end technologies</p>
-            <button>
-              <a href="https://codepen.io/kennymark/full/LGxpNz/" target="_blank"> View Project</a>
-            </button>
-          </div>
-        </div>
-      </div>
-
-      <div class="external-links">
-        <a href="projects.html" _target="blank">
-          <button class="btn btn-projects">View more projects &#8594;</button>
-        </a>
-        <a href="https://www.github.com/kennymark" _target="blank">
-          <button class="btn btn-github">Visit my Github &#8619;</button>
-        </a>
-      </div>
-
-
-    </div>
-    <div class="profile" id="profile">
-      <div class="container">
-        <h1 class="center align header">A bit about me</h1>
-        <p>I'm Kenny Mark, currently a Computer Science major undergrad at the University of Chester. I'm a freelance junior
-          web developer by night and student by day. Web design is my main focus even though I love everything about user
-          interaction design and user experience on the web. I have worked on several personal projects including this website
-          which I designed and developed all by myself. I am minimalist when it comes design as one can see from this site,
-          and like the cliche goes, sometimes "Less is More".
-        </p>
-        <p>I actively spend many hours per day writing web code to perfect my skills. Web development is what I'm really passionate
-          about hence the effort I put into it. Skill wise, I can practically build any type of website with a good modern
-          and responsive design. I can also build backend with Node.js, visit my Github to see sample projects.You can hire
-          me to work on your website or front-end projects
-        </p>
-      </div>
+    <div class="introdiv">
+      <h1>Hello! I'm KENNY
+        <br> and I
+        <span class="intro"> </span> websites</h1>
     </div>
 
-    <div class="skills" id="skills">
-      <div class="skill--h1">
-        <h1>Things I can do ✌️</h1>
-
-      </div>
-      <div class="speciality">
-        <div class="box box1">
-          <h1>Speciality </h1>
-          <div class="boxcontent">
-            <li>HTML</li>
-            <li>CSS/SASS</li>
-            <li>JQuery</li>
-            <li>JavaScript</li>
-            <li>Ajax,Rest API's</li>
-            <li>Response Design</li>
-          </div>
+  </div>
+  <div class="projects" id="projects">
+    <h1>Portfolio Sample</h1>
+    <div class="row">
+      <div class="col proj1">
+        <img src="imgs/weatherapp.PNG" alt="An image of a weather app on codepen.io" />
+        <div class="description">
+          <p>This is a weather app built with the DarkWeather API to query weather data based on user data or from a search
+            input. Languages used here were mainly JavaScript, JQuery. I used both the axios library and the JQuery API methods
+            to make the API calls.</p>
+          <button>
+            <a href="https://run.plnkr.co/plunks/0EHSofihFea3DvhDaYRb/" target="_blank">View Project</a>
+          </button>
         </div>
-        <div class="box box2">
-          <h1>Worked With</h1>
-          <div class="boxcontent">
-            <li>React</li>
-            <li>Node.js</li>
-            <li>Express</li>
-            <li>MongoDB</li>
-            <li>SQL</li>
-            <li>Meteor</li>
-          </div>
+      </div>
+      <div class="col proj2">
+        <img src="imgs/texteditor.PNG" alt="An image of a text editor app on codepen" />
+        <div class="description">
+          <p>This is a web based text editor that does real time text analysis using natural language processing via the compromise.cool
+            and rita.js libraries</p>
+          <button>
+            <a href="https://codepen.io/kennymark/full/KmRVjp/" target="_blank">View Project</a>
+          </button>
+        </div>
+      </div>
+
+      <div class="col proj3">
+        <img src="imgs/schoolwebsite.PNG" alt="Image of the school website" />
+        <div class="description">
+          <p>One of my most proudest projects yet. The FSE-REC is an asp.net website built by me and and 3 other friends as
+            my second year work based learning project for the University. It was built in the course of 4 weeks. It includes
+            functionality ranging from a SQl database, dynamic routing, login integration. </p>
+          <button>
+            <a href="http://1613775.studentwebserver.co.uk/fserec/" target="_blank">View Project</a>
+          </button>
         </div>
       </div>
 
     </div>
+    <div class="row">
 
-    <div class="contact" id="contact">
-      <h1>Holla at me 👇</h1>
-      <form action="https://formspree.io/geniounico@outlook.com" method="POST" class="form">
-        <div class="leftform">
-          <label name="subject">Subject</label>
-          <br />
-          <br />
-          <input type="text" name="name" required/>
-          <br />
-          <label>Name</label>
-          <br />
-          <br />
-          <input type="text" required/>
-          <br />
-          <label>Email</label>
-          <br />
-          <br />
-          <input type="email" name="_replyto" required />
-          <br />
+      <div class="col proj4">
+        <img src="imgs/ozstudio.PNG" alt="an image of Oz Studios homepage" />
+        <div class="description">
+          <p>Oz Studios is a fictional web design agency website built to showcase my skills as a front-end developer or web
+            designer. The project is hosted on Github and the code can be used without attribution</p>
+          <button>
+            <a href="http://www.kennymark.co.uk/oz" target="_blank">View Project</a>
+          </button>
         </div>
-        <div class="rightform">
-          <label>Message</label>
-          <br />
-          <br />
-          <textarea cols="40" name="emailcontent"></textarea>
+      </div>
 
-        </div>
-        <div class="formbtn">
-          <input type="submit" value="Send" class="buttonsubmit" />
+      <div class="col proj5">
+        <img src="imgs/davon.png" alt="Image of Davon's website" />
+        <div class="description">
+          <p>Davon's personal website is a modern colourful website built to suit the clients need. Design was inspired by material
+            design and other artists design work </p>
+          <button>
+            <a href="http://www.kennymark.co.uk/davon" target="_blank">View Project</a>
+          </button>
         </div>
 
-      </form>
+      </div>
+      <div class="col proj6">
+        <img src="imgs/blogPost.PNG" alt="An simple design" />
+        <div class="description">
+          <p>A showcase of my skills to reproduce pixel by pixel a projuct after it has been designed by a designer using normal
+            front-end technologies</p>
+          <button>
+            <a href="https://codepen.io/kennymark/full/LGxpNz/" target="_blank"> View Project</a>
+          </button>
+        </div>
+      </div>
     </div>
-    <div class="footer">
-      <p>Made with 💕 by Kenny Mark</p>
+
+    <div class="external-links">
+      <a href="projects.html" _target="blank">
+        <button class="btn btn-projects">View more projects &#8594;</button>
+      </a>
+      <a href="https://www.github.com/kennymark" _target="blank">
+        <button class="btn btn-github">Visit my Github &#8619;</button>
+      </a>
     </div>
+
+
+  </div>
+  <div class="profile" id="profile">
+    <div class="container">
+      <h1 class="center align header">A bit about me</h1>
+      <p>I'm Kenny Mark, currently a Computer Science major undergrad at the University of Chester. I'm a freelance junior web
+        developer by night and student by day. Web design is my main focus even though I love everything about user interaction
+        design and user experience on the web. I have worked on several personal projects including this website which I
+        designed and developed all by myself. I am minimalist when it comes design as one can see from this site, and like
+        the cliche goes, sometimes "Less is More".
+      </p>
+      <p>I actively spend many hours per day writing web code to perfect my skills. Web development is what I'm really passionate
+        about hence the effort I put into it. Skill wise, I can practically build any type of website with a good modern
+        and responsive design. I can also build backend with Node.js, visit my Github to see sample projects.You can hire
+        me to work on your website or front-end projects
+      </p>
+    </div>
+  </div>
+
+  <div class="skills" id="skills">
+    <div class="skill--h1">
+      <h1>Things I can do ✌️</h1>
+
+    </div>
+    <div class="speciality">
+      <div class="box box1">
+        <h1>Speciality </h1>
+        <div class="boxcontent">
+          <li>HTML</li>
+          <li>CSS/SASS</li>
+          <li>JQuery</li>
+          <li>JavaScript</li>
+          <li>Ajax & Rest API's</li>
+          <li>Response Design</li>
+        </div>
+      </div>
+      <div class="box box2">
+        <h1>Worked With</h1>
+        <div class="boxcontent">
+          <li>React</li>
+          <li>Node.js</li>
+          <li>Express</li>
+          <li>MongoDB</li>
+          <li>SQL</li>
+          <li>Meteor</li>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="contact" id="contact">
+    <h1>Holla at me 👇</h1>
+    <form action="https://formspree.io/geniounico@outlook.com" method="POST" class="form">
+      <div class="leftform">
+        <label name="subject">Subject</label>
+        <br />
+        <br />
+        <input type="text" name="name" required/>
+        <br />
+        <label>Name</label>
+        <br />
+        <br />
+        <input type="text" required/>
+        <br />
+        <label>Email</label>
+        <br />
+        <br />
+        <input type="email" name="_replyto" required />
+        <br />
+      </div>
+      <div class="rightform">
+        <label>Message</label>
+        <br />
+        <br />
+        <textarea cols="40" name="emailcontent"></textarea>
+
+      </div>
+      <div class="formbtn">
+        <input type="submit" value="Send" class="buttonsubmit" />
+      </div>
+
+    </form>
+  </div>
+  <div class="footer">
+    <p>Made with 💕 by Kenny Mark</p>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.7/typed.min.js"></script>
