--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
     </div>
 
     <div class="external-links">
-      <a href="projects.html" _target="blank">
+      <a href="projects.html" target="_blank">
         <button class="btn btn-projects">View more projects &#8620;</button>
       </a>
-      <a href="https://www.github.com/kennymark" _target="blank">
+      <a href="https://www.github.com/kennymark" target="_blank">
         <button class="btn btn-github">Visit my Github &#8619;</button>
       </a>
     </div>
