Added projects pagewith design some info

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
     </div>
     <div class="introdiv">
-      <h1>Hello! I'm KENNY
-        <br> and I
+      <h1>Hello! I'm KENNY,
+        <br>I
         <span class="intro"> </span> websites</h1>
     </div>
 
@@ -180,10 +180,10 @@
     <div class="container">
       <h1 class="center align header">A bit about me</h1>
       <p>I'm Kenny Mark, currently a Computer Science major undergrad at the University of Chester. I'm a freelance junior web
-        developer by night and student by day. Web design is my main focus even though I love everything about user interaction
-        design and user experience on the web. I have worked on several personal projects including this website which I
-        designed and developed all by myself. I am minimalist when it comes design as one can see from this site, and like
-        the cliche goes, sometimes "Less is More".
+        developer by night and student by day. Web design/ development is my main focus even though I love everything about
+        user interaction design and user experience on the web. I have worked on several personal projects including this
+        website which I designed and developed all by myself. I am minimalist when it comes design as one can see from this
+        site, and like the cliche goes, sometimes "Less is More".
       </p>
       <p>I actively spend many hours per day writing web code to perfect my skills. Web development is what I'm really passionate
         about hence the effort I put into it. Skill wise, I can practically build any type of website with a good modern
@@ -205,7 +205,7 @@
           <li>HTML</li>
           <li>CSS/SASS</li>
           <li>JQuery</li>
-          <li>JavaScript</li>
+          <li>JavaScript/ES6</li>
           <li>Ajax & Rest API's</li>
           <li>Response Design</li>
         </div>
@@ -214,6 +214,7 @@
         <h1>Worked With</h1>
         <div class="boxcontent">
           <li>React</li>
+          <li>React Native</li>
           <li>Node.js</li>
           <li>Express</li>
           <li>MongoDB</li>
