removed main.js link in project file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!--FACEBOOK-->
   <meta property="og:title" content="My personal website">
   <meta property="og:site_name" content="">
-  <meta property="og:url" content="http://www.kennymark.co.uk/new/">
+  <meta property="og:url" content="http://www.kennymark.co.uk/">
   <meta property="og:description" content="This is Kenny Mark's Personal Website. I am a computer science student who loves web development. I am for hire">
 
   <!--TWITTER-->
@@ -30,7 +30,7 @@
   <meta property="twitter:title" content="">
   <meta property="twitter:description" content="">
   <meta property="twitter:creator" content="Kenny Mark">
-  <meta property="twitter:url" content="http://www.kennymark.co.uk/new/">
+  <meta property="twitter:url" content="http://www.kennymark.co.uk">
 
 
   <!--FAVICONS-->
