more work projects page

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
   <link rel="icon" type="image/png" sizes="96x96" href="assets/fav/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/fav/favicon-16x16.png">
   <link rel="manifest" href="/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileColor" content="#40e0d0">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  
 
 
   <link rel="stylesheet" href="style.css" type="text/css" />
@@ -106,7 +106,7 @@
         </div>
       </div>
       <div class="col proj2">
-        <img src="imgs/texteditor.PNG" alt="An image of a text editor app on codepen" />
+        <img src="imgs/texteditor.jpg" alt="An image of a text editor app on codepen" />
         <div class="description">
           <p>This is a web based text editor that does real time text analysis using natural language processing via the compromise.cool
             and rita.js libraries</p>
