updated to reflect my current status and added CV

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="msapplication-TileColor" content="#40e0d0">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  
+
 
 
   <link rel="stylesheet" href="style.css" type="text/css" />
@@ -169,6 +169,7 @@
       <a href="projects.html" target="_blank">
         <button class="btn btn-projects">View more projects &#8620;</button>
       </a>
+
       <a href="https://www.github.com/kennymark" target="_blank">
         <button class="btn btn-github">Visit my Github &#8619;</button>
       </a>
@@ -179,16 +180,18 @@
   <div class="profile" id="profile">
     <div class="container">
       <h1 class="center align header">A bit about me</h1>
-      <p>I'm Kenny Mark, currently a Computer Science major undergrad at the University of Chester. I'm a freelance junior web
-        developer by night and student by day. Web design/ development is my main focus even though I love everything about
-        user interaction design and user experience on the web. I have worked on several personal projects including this
-        website which I designed and developed all by myself. I am minimalist when it comes design as one can see from this
-        site, and like the cliche goes, sometimes "Less is More".
+      <p>I'm Kenny Mark, currently a Software Engineer for Trelleborg Marine Systems and formally a University of Chester graduate.
+        I graduated with a Computer Science degree but web design/ development is my main focus though I love everything
+        about UI design and UX on the web. I have worked on several personal projects including this website. I also develop
+        and design mobile apps with React Native. I am minimalist when it comes design as one can see from this site, and
+        like the cliche goes, sometimes "Less is More".
       </p>
-      <p>I actively spend many hours per day writing web code to perfect my skills. Web development is what I'm really passionate
-        about hence the effort I put into it. Skill wise, I can practically build any type of website with a good modern
-        and responsive design. I can also build backend with Node.js, visit my Github to see sample projects.You can hire
-        me to work on your website or front-end projects
+      <p>I actively spend many hours per day writing code at work or on my own to perfect my skills. I have developed applications
+        on almost for both mobile, desktop and web both in their native languages or using cross-platform solutions. Software
+        development aside, I am also heavily invested in the creation and nurturing of ideas that are used by the masses.
+        I incline to be entreprenuerial at times and product design would be an area I would love to explore and competent
+        at. I see beyond code and design.
+
       </p>
     </div>
   </div>
@@ -208,21 +211,28 @@
           <li>JavaScript/ES6</li>
           <li>Ajax & Rest API's</li>
           <li>Response Design</li>
+          <li>Angular 2+</li>
         </div>
       </div>
       <div class="box box2">
-        <h1>Worked With</h1>
+        <h1>Familiar With</h1>
         <div class="boxcontent">
-          <li>React</li>
+          <li>Reactjs</li>
           <li>React Native</li>
           <li>Node.js</li>
           <li>Express</li>
           <li>MongoDB</li>
           <li>SQL</li>
-          <li>Meteor</li>
+          <li>Git / Version Control</li>
         </div>
       </div>
     </div>
+
+    <a href="./assets/CV Kenneth.pdf" target="_blank">
+      <button class="btn btn-cv">
+        <b>View CV</b>
+      </button>
+    </a>
 
   </div>
 
